Added styles and basic container setup

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script language="javascript" type="text/javascript" src="p5.min.js"></script>
   <!-- uncomment lines below to include extra p5 libraries -->
-  <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
+  <script language="javascript" src="p5.dom.js"></script>
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
   <script language="javascript" type="text/javascript" src="script.js"></script>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
@@ -12,5 +13,25 @@
 </head>
 
 <body style="background-color: #55FFD6;">
+<div class="container">
+<div class="header text-center">
+	<h2>This is the header section where we put our logo</h2>
+</div>
+<div class="hero">
+	<h1>We are all about beauty. To design and create beauty for people to appreciate.</h1>
+</div>
+<div class="contact text-center">
+	<button>Contact Us Here</button>
+</div>
+  </div>
+  <div class="footer text-center">
+<h3>We are based in sunny Los Angeles, California</h3>
+<h4>hello@trezured.com</h4>
+<div class="social-media">
+<a href="http://github.com/borisbees">
+<img height="50" src="http://www.jenniferjbae.com/assets/typicons/github-f6a1ef328c4134fe10f1bece6a78cb23.png" >
+</a>
+</div>
+</div>
 </body>
 </html>
