--- a/index.html
+++ b/index.html
@@ -8,30 +8,37 @@
   <script language="javascript" src="p5.dom.js"></script>
   <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
   <script language="javascript" type="text/javascript" src="script.js"></script>
-  <!-- this line removes any default padding and style. you might only need one of these values set. -->
-  <style> body {padding: 0; margin: 0;} </style>
 </head>
 
-<body style="background-color: #55FFD6;">
-<div class="container">
-<div class="header text-center">
-	<h2>This is the header section where we put our logo</h2>
-</div>
-<div class="hero">
-	<h1>We are all about beauty. To design and create beauty for people to appreciate.</h1>
-</div>
-<div class="contact text-center">
-	<button>Contact Us Here</button>
-</div>
+<body>
+
+  <div class="header text-center">
+    <h2>This is the header section where we put our logo</h2>
   </div>
-  <div class="footer text-center">
-<h3>We are based in sunny Los Angeles, California</h3>
-<h4>hello@trezured.com</h4>
-<div class="social-media">
-<a href="http://github.com/borisbees">
-<img height="50" src="http://www.jenniferjbae.com/assets/typicons/github-f6a1ef328c4134fe10f1bece6a78cb23.png" >
-</a>
-</div>
-</div>
+
+
+  <div class="container">
+
+    <div class="hero">
+    	<h1>We are all about beauty. To design and create beauty for people to appreciate.</h1>
+    </div>
+
+    <div class="contact text-center">
+    	<button>Contact Us Here</button>
+    </div>
+
+    <div class="footer text-center">
+      <h3>We are based in sunny Los Angeles, California</h3>
+      <h4>hello@trezured.com</h4>
+      <div class="social-media">
+        <a href="http://github.com/borisbees">
+          <img height="50" src="http://www.jenniferjbae.com/assets/typicons/github-f6a1ef328c4134fe10f1bece6a78cb23.png" >
+        </a>
+      </div>
+    </div>
+
+  </div>
+
+
 </body>
 </html>
