--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="header text-center">
-    <h2>This is the header section where we put our logo</h2>
+    <img src="/img/smileyfacelogo.png">
   </div>
 
 
