--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="header text-center">
-    <img src="/img/smileyfacelogo.png">
+    <img src="img/smileyfacelogo.png">
   </div>
 
 
