--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="header text-center">
-    <img src="img/smileyfacelogo.png">
+    <img alt="smileface space product design los angeles logo" class="logo" src="img/smileyfacelogo.png">
   </div>
 
 
