stupid html fix

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <label for="Email">Email:</label>
         <input type="text" name="Email" id="Email" class="center-margin margin-topbot-20"/>
         
-        <label for="Message">Message:</label><br />
+        <label for="Message">Message:</label>
         <textarea name="Message" rows="20" cols="20" id="message" class="center-margin"></textarea>
 
         <input type="submit" name="submit" value="I TRUST YOU WITH MY DREAMS" class="dreamsbtn" />
